@@ -2,7 +2,7 @@ import os
 import logging
 from auxiliary.paths import logs_path,  aux_path, save_xmatch_path
 
-logging.basicConfig(filename=os.path.join(logs_path,'get_predictions.log'), format='%(asctime)s %(message)s', datefmt='%m/%d/%Y %I:%M:%S %p',
+logging.biasicConfig(filename=os.path.join(logs_path,'errors_field.log'), format='%(asctime)s %(message)s', datefmt='%m/%d/%Y %I:%M:%S %p',
                     level=logging.DEBUG, filemode='a')
 
 def match_stilts(filename, replace=True):
@@ -18,7 +18,7 @@ def match_stilts(filename, replace=True):
     final_filename = os.path.join(save_xmatch_path,file)
     
     if os.path.exists(final_filename) and replace==False:
-        logging.warning("Crossmatch file already exists. Passing.")
+        #logging.warning("Crossmatch file already exists. Passing.")
         return
             
     os.system(f"""java -jar {os.path.join(aux_path,"stilts.jar")} cdsskymatch in={input_filename} cdstable=II/335/galex_ais ra=RA dec=DEC radius=2 find=each blocksize=100000 \\
